deploy/4_ingress/5_deployment/0_hoshi-file.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hoshi-file
  namespace: hoshi-note
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-expose-headers: "*"
spec:
  tls:
    - hosts:
        - api.hoshi-note.ixk.me
      secretName: api-hoshi-note-tls
  rules:
    - host: api.hoshi-note.ixk.me
      http:
        paths:
          - path: /hoshi-file(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: hoshi-file
                port:
                  number: 8000
