deploy/4_ingress/5_deployment/2_hoshi-note.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hoshi-note
  namespace: hoshi-note
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  tls:
    - hosts:
        - api.hoshi-note.ixk.me
      secretName: api-hoshi-note-tls
  rules:
    - host: api.hoshi-note.ixk.me
      http:
        paths:
          - path: /hoshi-note(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: hoshi-note
                port:
                  number: 8000
