deploy/4_ingress/5_deployment/ext_gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hoshi-gateway
  namespace: hoshi-note
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - api.hoshi-note.ixk.me
      secretName: api-hoshi-note-tls
  rules:
    - host: api.hoshi-note.ixk.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hoshi-gateway
                port:
                  number: 8000
